[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/blockWhite.png" type="Texture" id=1]
[ext_resource path="res://scripts/pieces/bloque.gd" type="Script" id=2]
[ext_resource path="res://scenes/fire.tscn" type="PackedScene" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RayShape2D" id=3]
length = 51.0

[sub_resource type="RayShape2D" id=4]
length = 51.0

[sub_resource type="RayShape2D" id=5]
length = 51.0

[sub_resource type="RectangleShape2D" id=6]

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="BloqueEstatico" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloqueEstatico"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="BloqueEstatico"]
texture = ExtResource( 1 )

[node name="Fire" parent="BloqueEstatico" instance=ExtResource( 3 )]

[node name="Derecha" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Derecha"]
rotation = -1.5708
shape = SubResource( 3 )

[node name="Suelo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Suelo"]
shape = SubResource( 4 )

[node name="Izquierda" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Izquierda"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="Techo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Techo"]
position = Vector2( 0, -60 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Derecha" to="." method="_on_Derecha_body_entered"]
[connection signal="area_entered" from="Suelo" to="." method="_on_Suelo_area_entered"]
[connection signal="area_shape_entered" from="Suelo" to="." method="_on_Suelo_area_shape_entered"]
[connection signal="body_entered" from="Suelo" to="." method="_on_Suelo_body_entered"]
[connection signal="body_entered" from="Izquierda" to="." method="_on_Izquierda_body_entered"]
[connection signal="area_entered" from="Techo" to="." method="_on_Techo_area_entered"]
